Fix storybook icon align

--- a/.storybook/storybook.scss
+++ b/.storybook/storybook.scss
@@ -5,7 +5,3 @@
 body {
   background-color: transparent !important;
 }
-
-div {
-  text-align: left;
-}
