--- a/src/react/Design/Icon/IconDictionary.scss
+++ b/src/react/Design/Icon/IconDictionary.scss
@@ -6,6 +6,7 @@
     box-shadow: none;
     cursor: pointer;
     padding: s(0.5);
+    text-align: center;
     transition: background-color get($tween, 'hover'), box-shadow get($tween, 'hover'), color get($tween, 'hover');
 
     &:hover {
